<resources>
    <string name="app_name">SimpleLoginApp</string>
    <string name="btnLogin">Login</string>
    <string name="txtUsername">Username</string>
    <string name="txtPassword">Password</string>

    <string name="btnRegister">Register</string>
    <string name="btnCreateAccount">Create Account</string>
    <string name="btnBackToLogin">Login Account</string>
    <string name="lblAttempts">Attempts: %1$d / %2$d</string>
    <string name="msg_enter_both">You must enter Username and Password.</string>
    <string name="msg_incorrect">Username or Password is incorrect.</string>
    <string name="msg_locked">Your account is locked for 1 day.</string>
    <string name="btnTryAnother">Try another account</string>
    <string name="msg_locked_remaining">This account is locked. Try again in %1$s.</string>
    <string name="btnLogout">Logout</string>
    <string name="msg_logged_out">Logged out</string>
    <string name="msg_password_mismatch">Passwords do not match.</string>
    <string name="msg_username_exists">Username already exists.</string>
    <string name="msg_account_created">Account created. You can now login.</string>
    <string name="txtRetypePassword">Retype Password</string>
    <string name="err_required">Required</string>

    <string name="forgot_password">Forgot password?</string>
    <string name="title_reset_password">Reset password</string>
    <string name="txtNewPassword">New Password</string>
    <string name="btnReset">Reset</string>
    <string name="msg_username_not_found">Username not found.</string>
    <string name="msg_password_reset_success">Password has been reset.</string>

    <string name="lock_msg_with_remaining">Your account (%1$s) is locked. Try again in %2$s.</string>
    <string name="this_account">this account</string>
</resources>
