<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <LinearLayout
        android:id="@+id/registerBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/editRegUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txtUsername"
            android:inputType="textPersonName"/>

        <EditText
            android:id="@+id/editRegPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txtPassword"
            android:inputType="textPassword"
            android:layout_marginTop="12dp"/>

        <EditText
            android:id="@+id/editRegConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txtRetypePassword"
            android:inputType="textPassword"
            android:layout_marginTop="12dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCreateAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnCreateAccount"
            android:layout_marginTop="18dp"/>

        <Button
            android:id="@+id/btnBackToLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnBackToLogin"
            android:layout_marginTop="8dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
